--- a/css/index.css
+++ b/css/index.css
@@ -6,10 +6,10 @@ body {
     vertical-align: middle;
 }
 .main audio {
-    position: absolute;
-    left: 190px;
-    height: 24px;
-    width: 400px;
+    /*position: absolute;*/
+    /*left: 190px;*/
+    /*height: 24px;*/
+    /*width: 400px;*/
 }
 iframe,embed {
     width: 100% !important;
